@@ -21,17 +21,12 @@ import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 import static org.mockito.Mockito.times;
-import static com.android.server.companion.datatransfer.continuity.TaskContinuityTestUtils.createAssociationInfo;
-import static com.android.server.companion.datatransfer.continuity.TaskContinuityTestUtils.createRunningTaskInfo;
 
-import android.app.ActivityManager;
-import android.companion.AssociationInfo;
 import android.companion.datatransfer.continuity.RemoteTask;
 import android.companion.datatransfer.continuity.IRemoteTaskListener;
 import android.platform.test.annotations.Presubmit;
 import android.testing.AndroidTestingRunner;
 
-import com.android.server.companion.datatransfer.continuity.connectivity.ConnectedAssociationStore;
 import com.android.server.companion.datatransfer.continuity.messages.RemoteTaskInfo;
 
 import org.junit.Before;
@@ -51,166 +46,196 @@ import java.util.List;
 @RunWith(AndroidTestingRunner.class)
 public class RemoteTaskStoreTest {
 
-    @Mock
-    private ConnectedAssociationStore mMockConnectedAssociationStore;
+    private class FakeRemoteTaskListener extends IRemoteTaskListener.Stub {
+        List<List<RemoteTask>> remoteTasksReportedToListener = new ArrayList<>();
 
-    private final IRemoteTaskListener mRemoteTaskListener = new IRemoteTaskListener.Stub() {
         @Override
         public void onRemoteTasksChanged(List<RemoteTask> remoteTasks) {
             remoteTasksReportedToListener.add(remoteTasks);
         }
-    };
 
-    private final List<List<RemoteTask>> remoteTasksReportedToListener = new ArrayList<>();
+        public void verifyReportedTasks(List<List<RemoteTask>> expectedTasks) {
+            assertThat(remoteTasksReportedToListener).hasSize(expectedTasks.size());
+            for (int i = 0; i < expectedTasks.size(); i++) {
+                assertThat(remoteTasksReportedToListener.get(i))
+                    .containsExactlyElementsIn(expectedTasks.get(i));
+            }
+        }
+    }
+
     private RemoteTaskStore taskStore;
 
     @Before
     public void setUp() {
         MockitoAnnotations.initMocks(this);
-
-        remoteTasksReportedToListener.clear();
-        taskStore = new RemoteTaskStore(mMockConnectedAssociationStore);
-        taskStore.addListener(mRemoteTaskListener);
+        taskStore = new RemoteTaskStore();
     }
 
     @Test
-    public void constructor_registersObserver() {
-        verify(mMockConnectedAssociationStore, times(1))
-            .addObserver(taskStore);
+    public void addListener_notifiesListenerOfCurrentTasks() {
+        FakeRemoteTaskListener listener = new FakeRemoteTaskListener();
+        taskStore.addListener(listener);
+        listener.verifyReportedTasks(List.of(Collections.emptyList()));
     }
 
     @Test
-    public void onTransportConnected_addsNewAssociationAndNotifiesListeners() {
+    public void addDevice_addsDeviceAndNotifiesListeners() {
+        FakeRemoteTaskListener listener = new FakeRemoteTaskListener();
+        taskStore.addListener(listener);
+
         // Simulate a new association being connected.
-        AssociationInfo associationInfo = createAssociationInfo(1, "name");
-        taskStore.onTransportConnected(associationInfo);
-        assertThat(remoteTasksReportedToListener).hasSize(0);
+        int deviceId = 1;
+        String deviceName = "name";
+        taskStore.addDevice(deviceId, deviceName);
+        listener.verifyReportedTasks(List.of(Collections.emptyList()));
 
         // Add tasks to the new association.
-        RemoteTaskInfo remoteTaskInfo = createNewRemoteTaskInfo(1, "task1", 100L);
-        RemoteTask remoteTask
-            = remoteTaskInfo.toRemoteTask(associationInfo.getId(), "name");
+        RemoteTaskInfo remoteTaskInfo = new RemoteTaskInfo(1, "task1", 100L, new byte[0]);
+        RemoteTask remoteTask = remoteTaskInfo.toRemoteTask(deviceId, deviceName);
 
-        taskStore.setTasks(
-            associationInfo.getId(),
-            Collections.singletonList(remoteTaskInfo));
-        assertThat(remoteTasksReportedToListener).hasSize(1);
-        assertThat(remoteTasksReportedToListener.get(0)).containsExactly(remoteTask);
+        taskStore.setTasks(deviceId, Collections.singletonList(remoteTaskInfo));
+        listener.verifyReportedTasks(List.of(Collections.emptyList(), List.of(remoteTask)));
 
         // Verify the most recent task is added to the task store.
         assertThat(taskStore.getMostRecentTasks()).containsExactly(remoteTask);
     }
 
     @Test
-    public void setTasks_doesNotAddADeviceIfNoInformationAvailable() {
-        when(mMockConnectedAssociationStore.getConnectedAssociationById(0))
-            .thenReturn(null);
+    public void setTasks_doesNotSetIfDeviceNotAdded() {
+        FakeRemoteTaskListener listener = new FakeRemoteTaskListener();
+        taskStore.addListener(listener);
 
-        RemoteTaskInfo remoteTaskInfo = createNewRemoteTaskInfo(1, "task1", 100L);
+        RemoteTaskInfo remoteTaskInfo = new RemoteTaskInfo(1, "task1", 100L, new byte[0]);
 
         // Add the task. Since ConnectedAssociationStore does not have this
         // association, this should be ignored.
         taskStore.setTasks(0, Collections.singletonList(remoteTaskInfo));
 
         assertThat(taskStore.getMostRecentTasks()).isEmpty();
-        assertThat(remoteTasksReportedToListener).isEmpty();
+        listener.verifyReportedTasks(List.of(Collections.emptyList()));
     }
 
     @Test
     public void removeTask_removesTask() {
+        FakeRemoteTaskListener listener = new FakeRemoteTaskListener();
+        taskStore.addListener(listener);
+
         // Setup an association.
-        AssociationInfo associationInfo = createAssociationInfo(1, "name");
-        taskStore.onTransportConnected(associationInfo);
+        int deviceId = 1;
+        String deviceName = "name";
+        taskStore.addDevice(deviceId, deviceName);
 
         // Add two tasks
-        RemoteTaskInfo mostRecentTaskInfo = createNewRemoteTaskInfo(1, "task1", 200);
-        RemoteTask mostRecentTask
-            = mostRecentTaskInfo.toRemoteTask(associationInfo.getId(), "name");
-        RemoteTaskInfo secondMostRecentTaskInfo = createNewRemoteTaskInfo(2, "task2", 100);
+        RemoteTaskInfo mostRecentTaskInfo = new RemoteTaskInfo(1, "task1", 200, new byte[0]);
+        RemoteTask mostRecentTask = mostRecentTaskInfo.toRemoteTask(deviceId, deviceName);
+        RemoteTaskInfo secondMostRecentTaskInfo = new RemoteTaskInfo(2, "task2", 100,  new byte[0]);
         RemoteTask secondMostRecentTask
-            = secondMostRecentTaskInfo.toRemoteTask(associationInfo.getId(), "name");
+            = secondMostRecentTaskInfo.toRemoteTask(deviceId, deviceName);
         taskStore.setTasks(
-            associationInfo.getId(),
+            deviceId,
             Arrays.asList(mostRecentTaskInfo, secondMostRecentTaskInfo));
 
-        assertThat(taskStore.getMostRecentTasks())
-            .containsExactly(mostRecentTask);
-        assertThat(remoteTasksReportedToListener).hasSize(1);
-        assertThat(remoteTasksReportedToListener.get(0)).containsExactly(mostRecentTask);
+        assertThat(taskStore.getMostRecentTasks()).containsExactly(mostRecentTask);
+        listener.verifyReportedTasks(List.of(Collections.emptyList(), List.of(mostRecentTask)));
 
-        taskStore.removeTask(associationInfo.getId(), mostRecentTaskInfo.getId());
+        taskStore.removeTask(deviceId, mostRecentTaskInfo.id());
+        listener.verifyReportedTasks(
+            List.of(
+                Collections.emptyList(),
+                List.of(mostRecentTask),
+                List.of(secondMostRecentTask)));
         assertThat(taskStore.getMostRecentTasks()).containsExactly(secondMostRecentTask);
-        assertThat(remoteTasksReportedToListener).hasSize(2);
-        assertThat(remoteTasksReportedToListener.get(1))
-            .containsExactly(secondMostRecentTask);
     }
 
     @Test
-    public void onTransportDisconnected_removesAssociationAndNotifiesListeners() {
+    public void removeDevice_removesDeviceAndNotifiesListeners() {
+        FakeRemoteTaskListener listener = new FakeRemoteTaskListener();
+        taskStore.addListener(listener);
+
         // Create a fake association info, and have connected association store
         // return it.
-        AssociationInfo associationInfo = createAssociationInfo(1, "name");
-        when(mMockConnectedAssociationStore.getConnectedAssociationById(1))
-                .thenReturn(associationInfo);
-        taskStore.onTransportConnected(associationInfo);
+        int deviceId = 1;
+        String deviceName = "name";
+        taskStore.addDevice(deviceId, deviceName);
 
         // Set tasks for the association.
-        RemoteTaskInfo remoteTaskInfo = createNewRemoteTaskInfo(1, "task1", 100L);
-        taskStore.setTasks(associationInfo.getId(), Collections.singletonList(remoteTaskInfo));
-        assertThat(remoteTasksReportedToListener).hasSize(1);
-        assertThat(remoteTasksReportedToListener.get(0))
-            .containsExactly(remoteTaskInfo.toRemoteTask(1, "name"));
+        RemoteTaskInfo remoteTaskInfo = new RemoteTaskInfo(1, "task1", 100L, new byte[0]);
+        RemoteTask remoteTask = remoteTaskInfo.toRemoteTask(deviceId, deviceName);
+        taskStore.setTasks(deviceId, Collections.singletonList(remoteTaskInfo));
+        listener.verifyReportedTasks(List.of(Collections.emptyList(), List.of(remoteTask)));
 
         // Simulate the association being disconnected.
-        taskStore.onTransportDisconnected(associationInfo.getId());
+        taskStore.removeDevice(deviceId);
 
         // Verify the most recent task is added to the task store.
         assertThat(taskStore.getMostRecentTasks()).isEmpty();
-        assertThat(remoteTasksReportedToListener).hasSize(2);
-        assertThat(remoteTasksReportedToListener.get(1)).isEmpty();
+        listener.verifyReportedTasks(
+            List.of(Collections.emptyList(), List.of(remoteTask), Collections.emptyList()));
     }
 
     @Test
     public void addTask_addsTaskToAssociationAndNotifiesListeners() {
-        // Create a fake association info, and have connected association store return it.
-        AssociationInfo associationInfo = createAssociationInfo(1, "name");
-        when(mMockConnectedAssociationStore.getConnectedAssociationById(1))
-            .thenReturn(associationInfo);
-        taskStore.onTransportConnected(associationInfo);
+        FakeRemoteTaskListener listener = new FakeRemoteTaskListener();
+        taskStore.addListener(listener);
 
-        RemoteTaskInfo remoteTaskInfo = createNewRemoteTaskInfo(1, "task1", 100L);
-        RemoteTask remoteTask = remoteTaskInfo.toRemoteTask(associationInfo.getId(), "name");
-        taskStore.setTasks(1, Collections.singletonList(remoteTaskInfo));
+        // Create a fake association info, and have connected association store return it.
+        int deviceId = 1;
+        String deviceName = "name";
+        taskStore.addDevice(deviceId, deviceName);
+
+        RemoteTaskInfo remoteTaskInfo = new RemoteTaskInfo(1, "task1", 100L, new byte[0]);
+        RemoteTask remoteTask = remoteTaskInfo.toRemoteTask(deviceId, deviceName);
+        taskStore.setTasks(deviceId, Collections.singletonList(remoteTaskInfo));
         assertThat(taskStore.getMostRecentTasks()).containsExactly(remoteTask);
-        assertThat(remoteTasksReportedToListener).hasSize(1);
-        assertThat(remoteTasksReportedToListener.get(0)).containsExactly(remoteTask);
+        listener.verifyReportedTasks(List.of(Collections.emptyList(), List.of(remoteTask)));
 
         // Add a new task to the association.
-        RemoteTaskInfo newRemoteTaskInfo = createNewRemoteTaskInfo(2, "task2", 200L);
-        RemoteTask newRemoteTask = newRemoteTaskInfo.toRemoteTask(associationInfo.getId(), "name");
-        taskStore.addTask(1, newRemoteTaskInfo);
+        RemoteTaskInfo newRemoteTaskInfo = new RemoteTaskInfo(2, "task2", 200L, new byte[0]);
+        RemoteTask newRemoteTask = newRemoteTaskInfo.toRemoteTask(deviceId, deviceName);
+        taskStore.addTask(deviceId, newRemoteTaskInfo);
 
         // Verify the most recent tasks are added to the task store.
         assertThat(taskStore.getMostRecentTasks()).containsExactly(newRemoteTask);
-        assertThat(remoteTasksReportedToListener).hasSize(2);
-        assertThat(remoteTasksReportedToListener.get(1)).containsExactly(newRemoteTask);
+        listener.verifyReportedTasks(
+            List.of(
+                Collections.emptyList(),
+                List.of(remoteTask),
+                List.of(newRemoteTask)));
     }
 
     @Test
-    public void addTask_doesNotAddTaskIfAssociationNotConnected() {
-        RemoteTaskInfo remoteTaskInfo = createNewRemoteTaskInfo(1, "task1", 100L);
+    public void addTask_doesNotAddTaskIfDeviceNotAdded() {
+        RemoteTaskInfo remoteTaskInfo = new RemoteTaskInfo(1, "task1", 100L, new byte[0]);
         taskStore.addTask(1, remoteTaskInfo);
         assertThat(taskStore.getMostRecentTasks()).isEmpty();
     }
 
-    private RemoteTaskInfo createNewRemoteTaskInfo(
-        int id,
-        String label,
-        long lastUsedTimeMillis) {
+    @Test
+    public void updateTask_updatesTaskAndNotifiesListeners() {
+        FakeRemoteTaskListener listener = new FakeRemoteTaskListener();
+        taskStore.addListener(listener);
 
-        ActivityManager.RunningTaskInfo runningTaskInfo
-            = createRunningTaskInfo(id, label, lastUsedTimeMillis);
+        // Create a fake association info, and have connected association store return it.
+        int deviceId = 1;
+        String deviceName = "name";
+        taskStore.addDevice(deviceId, deviceName);
 
-        return new RemoteTaskInfo(runningTaskInfo);
+        RemoteTaskInfo initialTaskInfo = new RemoteTaskInfo(1, "task1", 100L, new byte[0]);
+        RemoteTask initialTask = initialTaskInfo.toRemoteTask(deviceId, deviceName);
+        taskStore.setTasks(deviceId, Collections.singletonList(initialTaskInfo));
+        assertThat(taskStore.getMostRecentTasks()).containsExactly(initialTask);
+        listener.verifyReportedTasks(List.of(Collections.emptyList(), List.of(initialTask)));
+
+        RemoteTaskInfo updatedTaskInfo = new RemoteTaskInfo(
+            initialTaskInfo.id(),
+            "task1",
+            200L,
+            new byte[0]);
+
+        RemoteTask updatedTask = updatedTaskInfo.toRemoteTask(deviceId, deviceName);
+        taskStore.updateTask(deviceId, updatedTaskInfo);
+        assertThat(taskStore.getMostRecentTasks()).containsExactly(updatedTask);
+        listener.verifyReportedTasks(
+            List.of(Collections.emptyList(), List.of(initialTask), List.of(updatedTask)));
     }
 }
